[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
description = "Doing advent of code in rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/RichoDemus/advent-of-code-2023"
keywords = ["aoc","advent-of-code"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
#itertools = "0.10.1"
#regex = "1.5.4"
#colored = "2.0.0"
#num-bigint = "0.4.3"
#num-traits = "0.2.15"
#strum = { version = "0.23", features = ["derive"] }
#split-iter = "0.1.0"
once_cell = "1.8.0"
#pathfinding = "3.0.5"
#pathfinding = "4.1.0"
#ouroboros = "0.14.0"
